--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="data:image/x-icon;,">
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
     <style>
-        body { margin: 0; padding: 15px; font-family: sans-serif; background: #f4f4f4; }
+        body { margin: 0; padding: 15px; font-family: sans-serif; background: #f4f4f4; min-width: 320px; }
         textarea { 
             width: 100%; height: 180px; box-sizing: border-box;
             border: 1px solid #ccc; border-radius: 4px; padding: 8px;
