Refactor web code into multiple files

--- a/web/index.html
+++ b/web/index.html
@@ -42,6 +42,6 @@
     <div id="status" class="status"></div>
     <div class="footer">Selecting a Typst image on a slide will automatically load its source code here.</div>
 
-    <script type="module" src="script.js"></script>
+    <script type="module" src="src/main.js"></script>
 </body>
 </html>
