Init dark mode (with toggle)

--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,12 @@
   </head>
 
   <body>
+    <div class="theme-toggle">
+      <label for="darkModeToggle">
+        <input type="checkbox" id="darkModeToggle" />
+        <span>Dark Mode</span>
+      </label>
+    </div>
     <div class="controls">
       <label for="fontSize">Font Size (pt):</label>
       <input id="fontSize" type="number" min="1" step="1.0" value="20">
