Use typst.ts instead of custom engine (#11)
Instead of our custom engine, we use the great
[`typst.ts`](https://github.com/Myriad-Dreamin/typst.ts) and also set up
Vite for bundling and the developer server.

--- a/web/index.html
+++ b/web/index.html
@@ -30,7 +30,7 @@
       <div id="previewContent"></div>
     </div>
 
-    <button id="insertBtn" disabled>Loading WASM...</button>
+    <button id="insertBtn"></button>
     <div id="status" class="status"></div>
     <div class="footer">Selecting a Typst image on a slide will automatically load its source code here.</div>
 
