Allow to disable fill color

--- a/web/index.html
+++ b/web/index.html
@@ -19,9 +19,14 @@
     <div class="controls">
       <label for="fontSize">Font Size (pt):</label>
       <input id="fontSize" type="number" min="1" step="1.0" value="20">
-      <label for="fillColor">Fill Color:</label>
-      <!-- eslint-disable-next-line @html-eslint/use-baseline -->
-      <input id="fillColor" type="color" value="#000000">
+      <div class="fill-color-group">
+        <label>
+          <input id="fillColorEnabled" type="checkbox" checked>
+          <span>Fill Color:</span>
+        </label>
+        <!-- eslint-disable-next-line @html-eslint/use-baseline -->
+        <input id="fillColor" type="color" value="#000000">
+      </div>
     </div>
     <textarea id="typstInput" placeholder="Enter Typst code... e.g. $ a^2 + b^2 = c^2 $"></textarea>
 
