Disable "Insert" button for no user input

--- a/web/index.html
+++ b/web/index.html
@@ -31,7 +31,7 @@
       <div id="previewContent"></div>
     </div>
 
-    <button id="insertBtn"></button>
+    <button id="insertBtn" disabled></button>
     <button id="bulkUpdateBtn" style="display: none;">Update font size</button>
     <div id="status" class="status"></div>
 
