Init diagnostics information display

--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,11 @@
       <div id="previewContent"></div>
     </div>
 
+    <div id="diagnosticsContainer" style="display: none;">
+      <span class="diagnostics-label">Diagnostics</span>
+      <div id="diagnosticsContent"></div>
+    </div>
+
     <button id="insertBtn" disabled></button>
     <button id="bulkUpdateBtn" style="display: none;">Update font size</button>
     <div id="status" class="status"></div>
