--- a/web/index.html
+++ b/web/index.html
@@ -27,8 +27,13 @@
     <textarea id="typstInput" placeholder="Enter Typst code, e.g. $ a^2 + b^2 = c^2 $"></textarea>
 
     <div id="previewContainer">
-      <span style="color: #999; font-size: 11px;">Preview</span>
+      <span id="previewLabel">Preview</span>
       <div id="previewContent"></div>
+    </div>
+
+    <div id="diagnosticsContainer" style="display: none;">
+      <span id="diagnosticsLabel">Diagnostics</span>
+      <div id="diagnosticsContent"></div>
     </div>
 
     <button id="insertBtn" disabled></button>
