Enable math mode by default

--- a/web/index.html
+++ b/web/index.html
@@ -25,7 +25,7 @@
       </div>
       <div class="control-group checkbox-group">
         <label>
-          <input id="mathModeEnabled" type="checkbox">
+          <input id="mathModeEnabled" type="checkbox" checked>
           <span>Only Math</span>
         </label>
       </div>
