Try to use file system api
(works, but unfortuantely, low baseline acceptance)

--- a/web/index.html
+++ b/web/index.html
@@ -57,7 +57,7 @@
     <div id="filePickerSection" class="file-picker-section">
       <div id="filePickerLabel" class="file-picker-label">Select a file</div>
       <div class="file-picker-controls">
-        <input id="fileInput" type="file" class="file-input" accept=".typ,.txt">
+        <button id="fileInput" class="file-input">Choose File</button>
         <button id="generateFromFileBtn" style="display: none;">Generate from file</button>
       </div>
     </div>
