--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,7 @@
     <title>Typst for PowerPoint</title>
     <link href="data:image/x-icon;," rel="icon">
     <link href="styles.css" rel="stylesheet">
+    <link href="styles/file-dropzone.css" rel="stylesheet">
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
   </head>
 
@@ -54,10 +55,23 @@
       Selecting a Typst image on a slide will automatically load its source code here.
     </div>
 
-    <div id="filePickerSection" class="file-picker-section">
-      <div id="filePickerLabel" class="file-picker-label">Select a file</div>
-      <div class="file-picker-controls">
-        <button id="fileInput" class="file-input">Choose File</button>
+    <div class="file-dropzone">
+      <div class="dropzone-container">
+        <label id="dropzoneLabel" class="dropzone-label">
+          <div class="dropzone-icon">📁</div>
+          <div class="dropzone-text">Drop a Typst file here</div>
+          <div class="dropzone-subtext">or click to browse</div>
+          <input id="fileInput" type="file" class="dropzone-input" accept=".typ,.txt">
+        </label>
+
+        <div id="fileInfo" class="file-info">
+          <div class="file-icon">📄</div>
+          <div class="file-details">
+            <div id="fileName" class="file-name"></div>
+            <div id="fileMeta" class="file-meta"></div>
+          </div>
+        </div>
+
         <button id="generateFromFileBtn" style="display: none;">Generate from file</button>
       </div>
     </div>
