Change button label based on selection (Generate vs. Update)

--- a/web/index.html
+++ b/web/index.html
@@ -73,7 +73,7 @@
           <div id="fileName"></div>
         </div>
 
-        <button id="generateFromFileBtn" style="display: none;">Generate from file</button>
+        <button id="generateFromFileBtn" style="display: none;"></button>
       </div>
     </div>
 
