--- a/web/privacy.html
+++ b/web/privacy.html
@@ -12,7 +12,7 @@
 
     <p class="last-updated">Last Updated: January 25, 2026</p>
 
-    <i>Typst for PowerPoint</i> is a PowerPoint Add-in that allows users to create and insert equations using the <a href="https://typst.app">Typst</a> typesetting system directly within PowerPoint presentations. It is not affiliated with or endorsed by the Typst project, but instead a community-driven effort to bring Typst's capabilities to PowerPoint users.
+    <p><i>Typst for PowerPoint</i> is a PowerPoint Add-in that allows users to create and insert equations using the <a href="https://typst.app">Typst</a> typesetting system directly within PowerPoint presentations. It is not affiliated with or endorsed by the Typst project, but instead a community-driven effort to bring Typst's capabilities to PowerPoint users.</p>
 
     <p>
       The app is completely <a href="https://github.com/splines/typst-powerpoint">open source</a> and MIT-licensed. We don't store any user data or personal information. Typst code and generated content stay local on your machine within your PowerPoint files. The only data that may be collected are standard web server access logs by GitHub Pages when loading the Add-in UI, which is hosted as a static site on GitHub Pages.
