Don't include alt text for image as it's just decoration

--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,7 @@
     <h1>PPTypst | Bring Typst to PowerPoint</h1>
 
     <a href="https://github.com/splines/pptypst">
+      <!-- eslint-disable-next-line @html-eslint/require-img-alt -->
       <img src="public/pptypst-banner.jpg" width="100%">
     </a>
 
